[project]
name = "sugar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
        "iopath>=0.1.10",
        "nvdiffrast>=0.3.3",
        "open3d>=0.19.0",
        "pip>=25.2",
        "plyfile>=1.1.2",
        "rich>=14.1.0",
        "torch==2.4.1",
        "vtk>=9.5.2",
]


[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true



[tool.uv.sources]
torch = [
    { index = "pytorch-cu124"}
]




nvdiffrast = { git = "https://github.com/NVlabs/nvdiffrast.git", rev = "729261dc64c4241ea36efda84fbf532cc8b425b8" }
simple-knn = { git = "https://gitlab.inria.fr/bkerbl/simple-knn.git"}
# diff-gaussian-rasterization = { git = "https://github.com/graphdeco-inria/diff-gaussian-rasterization.git"}
pytorch3d = { git = "https://github.com/facebookresearch/pytorch3d.git"} # in windows, $env:CUB_HOME="C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.4"


[tool.uv.extra-build-dependencies]
simple-knn = ["torch"]
diff-gaussian-rasterization = ["torch"]
pytorch3d = ["torch"]
